2012-04-12: v1.6:
+ Add option to force LANG for changing weekdays order

2012-03-26: v1.5:
- Fix compilation on BSD
- Fix current executable path on BSD
- Fix exception when gsimplecal gets a PID > SEMVMX

2012-02-18: v1.4:
+ Add option to close gsimplecal when it loses focus

2012-01-23: v1.3:
+ Add options for mainwindow position fine-tuning

2011-12-06: v1.2:
+ Add `--version` and `--help` flags

2011-09-19: v1.1:
+ Add new option: mainwindow_resizable

2011-09-05: v1.0:
- Fix bug with external viewer when mark_today is false
+ Add ability to show week numbers — show_week_numbers option

2011-08-24: v0.9:
- Fix license text not included in distribution
- Fix last `=` was treated as separator of key/value in config, not the first
+ Add ability to execute external viewer upon doubleclick on a date

2011-04-03: v0.8:
- Fix segmentation fault in the clock
+ Add keyboard bindings to go to the current date

2011-03-26: v0.7:
+ Mark today even when selecting some other day

2010-10-18: v0.6:
+ Add next_month and prev_month command line arguments
+ Add more config options (see man page)

2010-07-13: v0.5:
+ Add keyboard shortcuts to close the gsimplecal
* Add program crashes handling
+ Add keyboard shortcuts to switch months and years

2010-05-29: v0.4:
+ Use semaphores instead of libunique

2010-03-27: v0.3:
+ Migrate to autotools

2010-03-22: v0.2:
+ World clocks

2009-07-04: v0.1:
+ Calendar