@@ -20,5 +20,6 @@ src/Makefile
 src/Makefile.in
 src/config.h
 src/config.h.in
+src/config.h.in~
 src/stamp-h1
 src/gsimplecal
