@@ -3,6 +3,8 @@ Code and stuff:
  * Kim Hempel <kim@hempel.nu>
  * Paul Vint <pjvint@gmail.com>
  * Ryan Quinlan <ryan.van.quinlan@gmail.com>
+ * Johan Sjöblom <sjoblomj88@gmail.com>
+ * Unit 193
 
 Bugs and ideas:
  * Sergei Sarbash <sarbash.s@gmail.com>
