@@ -1,4 +1,4 @@
-Copyright (c) 2009-2012, Dmitry Medvinsky
+Copyright (c) 2009-2013, Dmitry Medvinsky
 
 Some rights reserved.
 
