@@ -1,5 +1,4 @@
 #include <string.h>
-#include <stdio.h>
 #include <sys/time.h>
 
 #include <gtk/gtk.h>
@@ -48,11 +47,11 @@ Calendar::Calendar()
         gtk_calendar_get_date((GtkCalendar*)widget,
                               &today_year, &today_month, &today_day);
         markToday();
-        gtk_signal_connect(GTK_OBJECT(widget), "month-changed",
-                           GTK_SIGNAL_FUNC(monthChangedCb), (gpointer)this);
+        g_signal_connect(widget, "month-changed",
+                         GCallback(monthChangedCb), (gpointer)this);
     }
-    gtk_signal_connect(GTK_OBJECT(widget), "day-selected-double-click",
-                       GTK_SIGNAL_FUNC(dayDoubleClickCb), (gpointer)this);
+    g_signal_connect(widget, "day-selected-double-click",
+                     GCallback(dayDoubleClickCb), (gpointer)this);
 
     gtk_widget_show(widget);
 }
