@@ -1,5 +1,4 @@
 #include <cstdlib>
-#include <iostream>
 #include <fstream>
 #include <string>
 #include <sstream>
@@ -32,21 +31,29 @@ void Config::Destroy()
 
 Config::Config()
 {
-    getDefaults();
-    if (getFile()) {
+    path = NULL;
+    setDefaults();
+    if (findPath()) {
         readFile();
     }
 }
 
 Config::~Config()
 {
+    if (path) {
+        g_free(path);
+    }
     for (unsigned int i = 0; i < clocks.size(); i++) {
         delete clocks[i];
     }
 }
 
+const gchar *const Config::getPath()
+{
+    return path;
+}
 
-void Config::getDefaults()
+void Config::setDefaults()
 {
     show_calendar = true;
     show_timezones = false;
@@ -63,27 +70,43 @@ void Config::getDefaults()
     close_on_unfocus = false;
 }
 
-bool Config::getFile()
+bool Config::findPath()
 {
-    // use XDG config dir (~/.config/ usually)
-    char *path_to_config;
-    path_to_config = g_build_filename(g_get_user_config_dir(),
-                                      "gsimplecal", "config", NULL);
-    if (g_file_test(path_to_config, G_FILE_TEST_EXISTS)) {
-        file.open(path_to_config, ios::in);
+    // First try XDG_CONFIG_HOME (usually `~/.config`).
+    const gchar *const user_config_dir = g_get_user_config_dir();
+    path = g_build_filename(user_config_dir, "gsimplecal", "config", NULL);
+    if (g_file_test(path, G_FILE_TEST_EXISTS)) {
+        return true;
     }
-    g_free(path_to_config);
-    return file.is_open();
+    g_free(path);
+    path = NULL;
+
+    // Then try XDG_CONFIG_DIRS (or `/etc/xdg`).
+    const gchar *const *const system_config_dirs = g_get_system_config_dirs();
+    for (const gchar *const *dir = system_config_dirs; dir && *dir; dir++) {
+        path = g_build_filename(*dir, "gsimplecal", "config", NULL);
+        if (g_file_test(path, G_FILE_TEST_EXISTS)) {
+            return true;
+        }
+        g_free(path);
+        path = NULL;
+    }
+
+    // Otherwise, bail.
+    return false;
 }
 
 void Config::readFile()
 {
+    std::ifstream file(path);
+    if (!file.is_open()) {
+        return;
+    }
     string line;
     while (!file.eof()) {
         getline(file, line);
         parseLine(line);
     }
-    file.close();
 }
 
 void Config::parseLine(string line)
