@@ -4,11 +4,16 @@
 #include "Config.hpp"
 #include "Timezones.hpp"
 #include "Clock.hpp"
+#include "config.h"
 
 
 Timezones::Timezones()
 {
+#if HAVE_GTK_BOX_NEW
+    widget = gtk_box_new(GTK_ORIENTATION_VERTICAL, 0);
+#else
     widget = gtk_vbox_new(false, 0);
+#endif
 
     Config* config = Config::getInstance();
     for (unsigned int clock_num = 0; clock_num < config->clocks.size(); clock_num++) {
