@@ -70,7 +70,9 @@ int main(int argc, char *argv[])
         }
     }
 
-    Unique* unique = new Unique();
+    Config* config = Config::getInstance();
+
+    Unique* unique = new Unique(config->getPath());
     if (unique->isRunning()) {
         try {
             if (argc >= 2 && strcmp(argv[1], "next_month") == 0) {
@@ -96,7 +98,6 @@ int main(int argc, char *argv[])
     signal(SIGUSR2, &signal_handler);
     signal(SIGCHLD, SIG_IGN);
 
-    Config* config = Config::getInstance();
     if (config->force_lang.length()) {
         // Must be done before gtk_init call.
         setenv("LANG", config->force_lang.c_str(), 1);
@@ -105,16 +106,16 @@ int main(int argc, char *argv[])
     gtk_init(&argc, &argv);
     main_window = new MainWindow();
 
-    gtk_signal_connect(GTK_OBJECT(main_window->getWindow()), "destroy",
-                       GTK_SIGNAL_FUNC(destroy), NULL);
+    g_signal_connect(main_window->getWindow(), "destroy",
+                     GCallback(destroy), NULL);
 
     if (config->show_timezones) {
         g_timeout_add(30000, (GSourceFunc)time_handler, NULL);
     }
     if (config->close_on_unfocus) {
-        g_signal_connect(G_OBJECT(main_window->getWindow()), "focus-out-event",
-                                  GTK_SIGNAL_FUNC(gtk_widget_destroy),
-                                  GTK_OBJECT(main_window->getWindow()));
+        g_signal_connect(main_window->getWindow(), "focus-out-event",
+                         GCallback(gtk_widget_destroy),
+                         main_window->getWindow());
     }
 
     gtk_main();
